Update analysis notebook

--- a/analysis/commit_analysis.ipynb
+++ b/analysis/commit_analysis.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d162436e",
+   "metadata": {},
+   "source": [
+    "# Análise de Mensagens de Commit\n",
+    "\n",
+    "Este notebook tem como objetivo analisar mensagens de commit de estudantes utilizando técnicas básicas de Processamento de Linguagem Natural (PLN). O objetivo final é treinar um modelo que seja capaz de identificar mensagens que não são minimamente explicativas, servindo como base para um gancho (`hook`) do Git que bloqueie commits mal escritos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "762ba6dc",
+   "metadata": {},
+   "source": [
+    "## Carregamento dos Dados\n",
+    "\n",
+    "Inicialmente, carregamos os dados extraídos da API do GitHub. As mensagens de commit foram coletadas de projetos de estudantes, organizadas em um arquivo Excel. Também realizamos um pré-processamento para limpar dados nulos e ajustar os nomes das colunas.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "06a6c598",
@@ -97,6 +117,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69fa62a9",
+   "metadata": {},
+   "source": [
+    "## Ajuste das Variáveis\n",
+    "\n",
+    "Algumas variáveis são transformadas para facilitar a leitura e posterior modelagem. Por exemplo, a coluna `is_code_related`, que inicialmente possui valores binários, é convertida em texto para facilitar a interpretação.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "4d60e54f",
@@ -104,6 +134,17 @@
    "outputs": [],
    "source": [
     "df['is_code_related'] = df['is_code_related'].apply(lambda x: \"yes\" if x == 1 else \"no\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90122192",
+   "metadata": {},
+   "source": [
+    "## Treinamento do Modelo\n",
+    "\n",
+    "Utilizamos a técnica de Bag-of-Words para transformar as mensagens de commit em vetores numéricos, tornando possível a aplicação de modelos estatísticos. Nesta etapa, também removemos palavras irrelevantes (stopwords) e aplicamos o `CountVectorizer`.\n",
+    "Com os dados vetorizados, treinamos um modelo de Regressão Logística para classificar mensagens como válidas ou inválidas. O modelo é simples, mas eficaz para este tipo de tarefa binária."
    ]
   },
   {
@@ -141,6 +182,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9aefcdb7",
+   "metadata": {},
+   "source": [
+    "## Avaliação do Modelo\n",
+    "\n",
+    "Avaliamos o desempenho do modelo utilizando a métrica de *recall*, que é especialmente relevante neste caso, pois nos interessa evitar o excesso de falsos negativos. Também usamos a matriz de confusão para entender o equilíbrio entre classes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "5bb09718",
@@ -175,12 +226,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "925948de",
+   "metadata": {},
+   "source": [
+    "## Salvamento do Modelo\n",
+    "\n",
+    "Depois de ajustar e validar o modelo, salvamos seus parâmetros em um arquivo `.pkl` para que possam ser reutilizados por um gancho de pré-commit no Git.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "413a6fa6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the entire pipeline (vectorizer + classifier)\n",
+    "joblib.dump(model, './scripts/models/commit_message_classifier.pkl')"
+   ]
   }
  ],
  "metadata": {
